# fn_meta

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  coverage.sh  lib_impl.rs  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
fn_meta_gen/: Cargo.toml
fn_meta_gen/src/: main.rs
src/: fn_meta.rs  fn_meta_ext.rs  fn_metadata.rs  fn_metadata_ext.rs  into_fn_meta.rs  into_fn_metadata.rs  lib.rs  type_ids.rs
