[package]
name = "fn_meta"
version = "0.7.3"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2021"
description = "Returns metadata about a function at runtime."
repository = "https://github.com/azriel91/fn_meta"
documentation = "https://docs.rs/fn_meta/"
readme = "README.md"
keywords = ["function", "meta", "metadata", "no_std"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["fn_meta_ext"]

[dependencies]
smallvec = { version = "1.9.0", optional = true }

[features]
default = []
fn_meta_ext = ["smallvec"]
high_arg_count = []
